<resources>
  <string name="app_name">Final Project</string>
  <string name="background_image">Main background image</string>
  <string name="welcome_back">Welcome back</string>
  <string name="sign_in_text">sign in to access your account</string>
  <string name="enter_your_email">Enter your email</string>
  <string name="password">Password</string>
  <string name="remember_me">Remember me</string>
  <string name="forget_password">Forget password ?</string>
  <string name="next"><![CDATA[Next >]]></string>
  <string name="register_now">Register now</string>
  <string name="new_member">New member?</string>
  <string name="get_started">Get Started</string>
  <string name="by_creating_a_free_account">by creating a free account</string>
  <string name="full_name">Full name</string>
  <string name="valid_email">Valid email</string>
  <string name="phone_number">Phone number</string>
  <string name="strong_password">Strong password</string>
  <string name="terms_and_conditions">By checking the box you agree to our terms and conditions</string>
  <string name="already_a_member">Already a member?</string>
  <string name="log_in">Log In</string>
  <string name="invalid_email_message">Invalid email</string>
  <string name="invalid_password_message">Password is too short</string>
  <string name="change_fragment">Change Fragment</string>
  <string name="fragment_a">Fragment A</string>
  <string name="fragment_b">Fragment B</string>
  <string name="recipe_image">Main image of a dish</string>
  <string name="share_icon">Share icon</string>
  <string name="like_icon">Like icon</string>
  <string name="title_for_a_recipe">Title for a recipe</string>
  <string name="description_for_a_recipe">This is a description for a recipe that is long enough to take two lines…</string>
  <string name="japanese_food">Japanese Food</string>
  <string name="search_here">Search here…</string>
  <string name="logout">Logout</string>
</resources>