<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/background_image"
      style="@style/CustomBackgroundImage"
      android:contentDescription="@string/background_image"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <TextView
      android:id="@+id/welcome_back_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcome_back"
      android:textSize="24sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="180dp"
      android:layout_marginStart="80dp"
      android:textColor="#252525" />


  <TextView
      android:id="@+id/sign_in_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sign_in_text"
      app:layout_constraintTop_toBottomOf="@+id/welcome_back_text"
      android:textSize="14sp"
      android:layout_marginTop="-5dp"
      android:textColor="#252525"
      android:gravity="center" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_layout"
      app:layout_constraintTop_toBottomOf="@+id/sign_in_text"
      android:layout_marginTop="95dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      style="@style/CustomTextInputLayout"
      android:hint="@string/enter_your_email"
      app:endIconDrawable="@drawable/ic_mail">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        style="@style/CustomTextInputEditText"
        android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_layout"
      app:layout_constraintTop_toBottomOf="@+id/email_layout"
      android:layout_marginTop="25dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      style="@style/CustomTextInputLayout"
      android:hint="@string/password"
      app:endIconDrawable="@drawable/ic_password">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        style="@style/CustomTextInputEditText"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <CheckBox
      android:id="@+id/remember_me"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/remember_me"
      android:textColor="#252525"
      app:layout_constraintTop_toBottomOf="@+id/password_layout"
      app:layout_constraintStart_toStartOf="@+id/password_layout"
      android:layout_marginTop="4dp"
      android:textSize="12sp" />

  <TextView
      android:id="@+id/forgot_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/forget_password"
      android:textColor="#6C63FF"
      app:layout_constraintTop_toBottomOf="@+id/password_layout"
      app:layout_constraintEnd_toEndOf="@+id/password_layout"
      android:layout_marginTop="20dp"
      android:textSize="12sp" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/next_button"
      style="@style/CustomNextButton"
      app:layout_constraintBottom_toBottomOf="@id/register_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <LinearLayout
      android:id="@+id/register_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginBottom="58dp">

    <TextView
        android:id="@+id/new_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_member"
        android:textStyle="bold"
        android:textColor="#252525"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textStyle="bold"
        android:textColor="#6C63FF"
        android:textSize="13sp"
        android:layout_marginStart="3dp" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>