<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal">

  <ImageView
      android:id="@+id/recipe_image"
      android:layout_width="125dp"
      android:layout_height="80dp"
      android:layout_marginEnd="16dp"
      android:contentDescription="@string/recipe_image"
      android:scaleType="centerCrop" />

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/recipe_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:ellipsize="end"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

      <ImageView
          android:id="@+id/share_icon"
          android:layout_width="18dp"
          android:layout_height="18dp"
          android:contentDescription="@string/share_icon" />

      <ImageView
          android:id="@+id/like_icon"
          android:layout_width="18dp"
          android:layout_height="18dp"
          android:contentDescription="@string/like_icon" />
    </LinearLayout>

  </LinearLayout>

</LinearLayout>